syntax = "proto3";

package pb;

option go_package="../pb";

message RegisterReq{
  string username = 1;
  string password = 2;
}
message RegisterResp{
  bool ok=1;
  string id=2;
}

message LoginReq{
  string username = 1;
  string password = 2;
}
message LoginResp{
  bool ok=1;
  string id=2;
}

message ChangePasswordReq{
  string id = 1;
  string password = 2;
  int64 loginTime=3;
}
message ChangePasswordResp{
  bool ok=1;
}

message InfoReq{
  string id = 1;
  int64 loginTime=2;
}
message InfoResp{
  bool ok=1;
  string id=2;
  string username=3;
  double balance=4;
}

service User{
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc Login(LoginReq) returns (LoginResp);
  rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordResp);
  rpc Info(InfoReq) returns (InfoResp);
}
